@@ -1,0 +1,49 @@
+<dtml-var manage_page_header>
+<dtml-with "_(management_view='Security')">
+<dtml-if  manage_tabs><dtml-var manage_tabs></dtml-if>
+</dtml-with>
+
+<h1>Permissions and roles for user &dtml-user;</h1>
+
+<dtml-let result="manage_getUserRolesAndPermissions(user)">
+
+<div>
+    <b>Roles</b>: <dtml-var "', '.join(result['roles'])"> 
+    <br/>
+    <b>Roles in Context</b>: <dtml-var "', ' .join(result['roles_in_context'])"> 
+    <br/>
+    <b>User account defined in</b>: <dtml-var "result['user_defined_in']">
+</div>
+
+<table> 
+    <thead>
+        <tr>
+            <th>Allowed permissions</th>
+            <th>Disallowed permissions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td valign="top">
+                <ul>
+                    <dtml-in "result['allowed_permissions']">
+                        <li>&dtml-sequence-item;
+                    </dtml-in>
+                </ul>
+            </td>
+            <td valign="top">
+                <ul>
+                    <dtml-in "result['disallowed_permissions']">
+                        <li>&dtml-sequence-item;
+                    </dtml-in>
+                </ul>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+
+</dtml-let>
+
+<dtml-var manage_page_footer>
+
