@@ -71,6 +71,11 @@ Zope Changes
         Products/PageTemplates/(configure.zcml, unicodeconflictresolver.py,
         interfaces.py)
 
+      - AccessControl.Role: added new method manage_getUserRolesAndPermissions().
+ 
+      - AccessControl: the form behind the "Security" tab has a new form 
+        for user-related reporting of permissions and roles 
+
     Bugs Fixed
       - Collector #2261: Acquisition when creating objects via Webdav.
 
